--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -1,1 +1,3 @@
-<h1 class="index">posts/index</h1>
+  <h1 class="index">posts/index</h1>
+  <%= link_to 'ログアウト(仮)', destroy_end_user_session_path, method: :delete %>
+
