--- a/app/assets/stylesheets/end_user/posts.scss
+++ b/app/assets/stylesheets/end_user/posts.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the end_user::posts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+// posts/new
+.user_img {
+  font-size: 8px;
+}
+
+.flex {
+    display: flex;
+    flex-flow: row wrap;
+}
