[finish]投稿・一覧機能

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,7 @@ body,
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  background-color: #f8f8f8;
 }
 
 footer {
@@ -38,4 +39,8 @@ footer {
 
 .container-fluid {
   margin-top: 70px;
+}
+
+.navbar-default {
+  background-color: white;
 }
