--- a/app/views/end_user/posts/index.html.erb
+++ b/app/views/end_user/posts/index.html.erb
@@ -1,3 +1,70 @@
-  <h1 class="index">posts/index</h1>
-  <%= link_to 'ログアウト(仮)', destroy_end_user_session_path, method: :delete %>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-10 col-xs-offset-1"></div></div>
+    <div class="col-xs-7 col-xs-offset-1">
+      <main class="posts-all">
+        <% @public_posts.each do |public_post| %>
+        <div class="post-box">
+          <div class="post-user_name">
+            <span>プロフ写真</span>
+            <span><%= public_post.title %></span>
+          </div>
+          <div class="posts_image">
+            <img src='<%= public_post.images.big.url %>' class="post_image" alt="ユーザー投稿写真">
+          </div>
+          <div class="post-bottom">
+            <div class="inline-icon">
+              <span class="icons">
+                <i class="far fa-heart fa-lg" aria-hidden="true"></i>
+                <i class="far fa-comment-dots fa-lg" aria-hidden="true"></i>
+                <i class="fas fa-sms fa-lg" aria-hidden="true"></i>
+                <i class="far fa-bookmark fa-lg" aria-hidden="true"></i>
+              </span>
+            </div>
+            <div class="favorites-count">
+              <p>xxxx人が「いいね」しました！</p>
+            </div>
+            <div class="post-body_index">
+              <div class="post-body">
+                <h4 class="title_index"><%= public_post.title %>【<%= public_post.genre.name %>】</h4>
+                <h5 class="subtitle"><%= public_post.subtitle %></h5>
+                <ul class="post-subtitle">
+                  <li class="post-time">xxx分前</li>
+                  <li class="view-detail-btn">
+                    <%= link_to "詳しく見る...", post_path(public_post), class: "link-post-detail text-right" %>
+                  </li>
+                </ul>
+                <did>
+                  (ここにコメントフォームがあってもいいかも)
+                </did>
+              </div>
+            </div>
+          </div>
+        </div>
+        <% end %>
+      </main>
+    </div>
+    <div class="col-xs-3 fixed-menu">
+      <h5>検索フォーム(User/Post)</h5>
+      <h5>並び替え機能をつける</h5>
+      <table>
+        <thead>
+          <tr>
+            <th>ジャンルから探す</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @genres.each do |genre| %>
+          <tr>
+            <td>
+              <!--リンクにして検索機能を付ける-->
+              <%= genre.name %>
+            </td>
+          </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
 
