--- a/app/views/end_user/posts/show.html.erb
+++ b/app/views/end_user/posts/show.html.erb
@@ -1,1 +1,91 @@
-<h1 class="index">posts/show</h1>
+<div class="container">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="col-xs-8 post-detail-box">
+        <h4 class="title_show"><%= @post.title %>【<%= @post.genre.name %>】</h4>
+        <div class="post-img-show">
+          <div class="post-detail-img">
+            <img src='<%= @post.images.thumb.url %>' class="detail-img" alt="ユーザー投稿写真">
+          </div>
+          <ul class="post-details">
+            <li class="subtitle-label">キャッチフレーズ</li>
+            <li class="detail-subtitle">
+              <%= @post.subtitle %>
+            </li>
+            <li class="caution-label">コツ・注意点</li>
+            <li class="detail-caution">
+              <%= @post.caution %>
+            </li>
+            <li>
+              <span class="cost-label">費用：</span>
+              <span class="detail-cost">
+                <%= @post.cost %>
+              </span>
+            </li>
+            <li>
+              <span class="creation_time-label">制作時間：</sspan>
+              <span class="detail-creation_time">
+                <%= @post.creation_time %>
+              </span>
+            </li>
+            <li>
+              <span class="level-label">難易度：</sspan>
+              <span class="detail-level">
+                <%= @post.level %>
+              </span>
+            </li>
+          </ul>
+        </div>
+        <div class="detail-body">
+          <h4>材料(購入先)</h4>
+          <div class="detail-materials">
+          <% @post.materials.each do |material| %>
+            <div>
+              <span class="material_name-show">
+                <%= material.material_name %>
+              </span>
+              <span class="shop-show">
+                (<%= material.shop %>)
+              </span>
+            </div>
+          <% end %>
+          </div>
+          <h4>詳細工程</h4>
+          <div class="detail-works">
+          <% @post.works.each do |work| %>
+            <div class="work-box">
+              <div class="work_image text-center">
+                <img src='<%= work.images.small.url %>' class="work-img" alt="工程の詳細写真">
+              </div>
+              <div class="work_detail">
+                <%= work.detail %>
+              </div>
+            </div>
+          <% end %>
+          </div>
+        </div>
+      </div>
+      <div class="col-xs-3 fixed-menu">
+        <h5>検索フォーム(User/Post)</h5>
+        <h5>並び替え機能をつける</h5>
+        <table>
+          <thead>
+            <tr>
+              <th>ジャンルから探す</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @genres.each do |genre| %>
+            <tr>
+              <td>
+                <!--リンクにして検索機能を付ける-->
+                <%= genre.name %>
+              </td>
+            </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
