--- a/app/views/end_user/posts/show.html.erb
+++ b/app/views/end_user/posts/show.html.erb
@@ -2,10 +2,18 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="col-xs-8 post-detail-box">
+        <span>
+          <% if @post.images.present? %>
+            <img src='<%= @post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
+          <% else %>
+            <%= image_tag "sample.jpg", size: '50x50' %>
+          <% end %>
+        </span>
+        <span><%= @post.end_user.name %></span>
         <h4 class="title_show"><%= @post.title %>【<%= @post.genre.name %>】</h4>
         <div class="post-img-show">
           <div class="post-detail-img">
-            <img src='<%= @post.images.thumb.url %>' class="detail-img" alt="ユーザー投稿写真">
+            <img src='<%= @post.images.medium.url %>' class="img-size" alt="ユーザー投稿写真">
           </div>
           <ul class="post-details">
             <li class="subtitle-label">キャッチフレーズ</li>
@@ -55,7 +63,11 @@
           <% @post.works.each do |work| %>
             <div class="work-box">
               <div class="work_image text-center">
-                <img src='<%= work.images.small.url %>' class="work-img" alt="工程の詳細写真">
+                <% if work.images.present? %>
+                  <img src='<%= work.images.small.url %>' class="img-size" alt="工程の詳細写真">
+                <% else %>
+                  <%= image_tag "sample.jpg", size: '115x75', class: "img-size" %>
+                <% end %>
               </div>
               <div class="work_detail">
                 <%= work.detail %>
@@ -65,7 +77,7 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-3 fixed-menu">
+      <div class="col-xs-3 fixed-menu-show">
         <h5>検索フォーム(User/Post)</h5>
         <h5>並び替え機能をつける</h5>
         <table>
