[create]いいね・コメント・ブックマーク(Ajax)

--- a/app/views/end_user/end_users/edit.html.erb
+++ b/app/views/end_user/end_users/edit.html.erb
@@ -62,6 +62,7 @@
       <% end %>
         <div class="end_user_out text-right">
           <%= render 'quit' %>
+          <%= render 'end_user/contacts/contact' %>
         </div>
       </div>
     </div>
