--- a/app/views/end_user/posts/new.html.erb
+++ b/app/views/end_user/posts/new.html.erb
@@ -51,7 +51,7 @@
                   <% else %>
                     <%= image_tag "sample.jpg", size: '115x75', onClick: "imgClick(this)", id: "work_img_prev", class: "img-size" %>
                   <% end %><br>
-                  <%= w.text_area :detail, size: '14x4', class: "works_detail text-form" %>
+                  <%= w.text_area :detail, size: '14x4', class: "works_detail text-form",placeholder: "説明をここに" %>
                 </div>
               </div>
               <p class="add-form-btn-work">追加</p>
