--- a/app/views/end_user/posts/show.html.erb
+++ b/app/views/end_user/posts/show.html.erb
@@ -2,14 +2,27 @@
   <div class="row">
     <div class="col-xs-12">
       <div class="col-xs-8 post-detail-box">
-        <span>
-          <% if @post.images.present? %>
-            <img src='<%= @post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
-          <% else %>
-            <%= image_tag "sample.jpg", size: '50x50' %>
-          <% end %>
-        </span>
-        <span><%= @post.end_user.name %></span>
+        <div class="show-top">
+          <div class="top-left">
+            <span>
+              <% if @post.images.present? %>
+                <img src='<%= @post.end_user.images.thumb.url %>' class="post_user_image" alt="プロフ写真">
+              <% else %>
+                <%= image_tag "sample.jpg", size: '50x50' %>
+              <% end %>
+            </span>
+            <span><%= @post.end_user.name %></span>
+          </div>
+          <div class="top-right">
+            <span class="favorite_<% @post.id %>">
+              <%= render 'end_user/favorites/favorite', target_post: @post %>
+            </span>
+            <i class="fas fa-sms fa-lg" aria-hidden="true"></i>
+            <span class="bookmark_<% @post.id %>">
+              <%= render 'end_user/bookmarks/bookmark', target_post: @post %>
+            </span>
+          </div>
+        </div>
         <h4 class="title_show"><%= @post.title %>【<%= @post.genre.name %>】</h4>
         <div class="post-img-show">
           <div class="post-detail-img">
@@ -77,26 +90,14 @@
           </div>
         </div>
       </div>
-      <div class="col-xs-3 fixed-menu-show">
-        <h5>検索フォーム(User/Post)</h5>
-        <h5>並び替え機能をつける</h5>
-        <table>
-          <thead>
-            <tr>
-              <th>ジャンルから探す</th>
-            </tr>
-          </thead>
-          <tbody>
-            <% @genres.each do |genre| %>
-            <tr>
-              <td>
-                <!--リンクにして検索機能を付ける-->
-                <%= genre.name %>
-              </td>
-            </tr>
-            <% end %>
-          </tbody>
-        </table>
+      <div class="fixed-menu-show">
+        <div class="comment-list_<% @post.id %> comment-list">
+          <%= render 'end_user/comments/comment', target_post: @post %>
+        </div>
+        <hr>
+        <div class="post-comment">
+          <%= render 'end_user/comments/form', target_post: @post, comment: @comment_new %>
+        </div>
       </div>
     </div>
   </div>
