--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,3 +1,5 @@
 <nav class="navbar navbar-default navbar-fixed-top">
-  <%= link_to "マイページ(仮)", end_user_path(current_end_user.id) %>
+  <% if end_user_signed_in? %>
+    <%= link_to "マイページ(仮)", end_user_path(current_end_user.id) %>
+  <% end %>
 </nav>
