--- a/app/views/end_user/relationships/_create_follow.html.erb
+++ b/app/views/end_user/relationships/_create_follow.html.erb
@@ -2,7 +2,7 @@
   <% followers.each do |follower| %>
 	<tr>
 	  <td>
-	  	<%= follower.name %>
+	  	<%= link_to follower.name, end_user_path(follower) %>
 	  </td>
 	  <td>
       <%= link_to "", end_user_relationships_path(follower), method: :post, remote: true, class: "fas fa-user-plus btn-edit" %>
